--- a/package.json
+++ b/package.json
@@ -72,12 +72,17 @@
     ]
   },
   "devDependencies": {
-    "@angular/common": "^2.0.0",
-    "@angular/compiler": "^2.0.0",
-    "@angular/core": "^2.0.0",
-    "@angular/forms": "^2.0.0",
-    "@angular/platform-browser": "^2.0.0",
-    "@angular/platform-browser-dynamic": "^2.0.0",
+    "@angular/common": "^2.0.1",
+    "@angular/compiler": "^2.0.1",
+    "@angular/compiler-cli": "^0.6.3",
+    "@angular/core": "^2.0.1",
+    "@angular/forms": "^2.0.1",
+    "@angular/platform-browser": "^2.0.1",
+    "@angular/platform-browser-dynamic": "^2.0.1",
+    "@angular/platform-server": "^2.0.1",
+    "@types/core-js": "^0.9.34",
+    "@types/jasmine": "^2.2.34",
+    "@types/node": "^6.0.42",
     "awesome-typescript-loader": "^1.0.0",
     "babel-cli": "^6.4.5",
     "babel-core": "^6.4.5",
@@ -125,12 +130,14 @@
     "testdom": "^2.0.0",
     "ts-node": "~1.2.0",
     "tslint": "^3.13.0",
-    "typescript": "^1.8.10",
+    "typescript": "^2.0.3",
     "typings": "^1.0.4",
     "url-loader": "^0.5.7",
     "vue": "^1.0.0",
+    "vue-hot-reload-api": "^2.0.6",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^8.2.1",
+    "vue-style-loader": "^1.0.0",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1",
     "zone.js": "^0.6.13"
