Ajust test for support AoT

--- a/angular2/tsconfig.json
+++ b/angular2/tsconfig.json
@@ -15,7 +15,8 @@
     "../core/**/*.ts"
   ],
   "exclude": [
-      "../node_modules/**/*.*"
+      "../node_modules/**/*.*",
+      "node_modules"
   ],
   "awesomeTypescriptLoaderOptions": {
     "resolveGlobs": true,
