--- a/angular2/package.json
+++ b/angular2/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "angular2-text-mask",
+  "name": "angular2-text-mask2",
   "version": "0.22.1",
   "description": "Angular 2 directive for input text masking",
   "main": "dist/angular2TextMask.js",
   "typings": "./dist/angular2TextMask.d.ts",
   "author": "M.K. Safi <msafi@msafi.com>",
   "license": "Unlicense",
+  "scripts": {
+      "build:js": "ngc -p tsconfig.json"
+  },
   "bugs": {
     "url": "https://github.com/text-mask/text-mask/issues"
   },
